Refactoring of current components Sass&Pug

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -52,7 +52,6 @@ $heading-2__font-size: 3em !default;
 $heading-3__font-size: $base__font-size * 1.55 !default;
 $heading-3__font-weight: $font-weight__normal !default;
 // .heading-4
-
 // .heading-5
 $heading-5__font-size: 1.05em !default;
 // .heading-2 & .heading-5
@@ -84,9 +83,7 @@ $heading-2-5__font-weight: $font-weight__bolder-8 !default;
         font-weight: $heading-3__font-weight;
         letter-spacing: 10px;
     }
-    &-4 {
-        
-    }
+    &-4 {}
     &-5 {
         font-size: $heading-5__font-size;
     }
@@ -103,13 +100,15 @@ $text-normal__font-size: $base__font-size !default;
 // __small
 $text-small__font-size: $text-normal__font-size - 0.15 !default;
 // __medium
-$text-medium__font-size: $text-normal__font-size + 0.15 !default;
+$text-medium__font-size: $text-normal__font-size+0.15 !default;
 // __large
-$text-large__font-size: $text-medium__font-size + 0.15 !default;
+$text-large__font-size: $text-medium__font-size+0.15 !default;
 // -muted
 $text-muted__color: $secondary-text-color !default;
 // strong
 $strong__font-weight: $font-weight__bold !default;
+
+
 .text {
     &-small {
         font-size: $text-small__font-size;
