--- a/src/templates/layout/_footer.pug
+++ b/src/templates/layout/_footer.pug
@@ -10,47 +10,47 @@ footer.main-footer
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
                 ul.main-footer__list
                     li
-                        a(href="#" class="main-footer__link") 123
+                        a(href="#" class="main-footer__link") Lorem ipsum ...
                     li
-                        a(href="#" class="main-footer__link") 123
+                        a(href="#" class="main-footer__link") Lorem ipsum ...
                     li
-                        a(href="#" class="main-footer__link") 123
+                        a(href="#" class="main-footer__link") Lorem ipsum ...
                     li
-                        a(href="#" class="main-footer__link") 123
+                        a(href="#" class="main-footer__link") Lorem ipsum ...
                     li
-                        a(href="#" class="main-footer__link") 123
+                        a(href="#" class="main-footer__link") Lorem ipsum ...
             .col-4
                 h3.heading.heading-5.white.text-center= data.mainFooter.recentChanges.h3
                 .heading-separator
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
                 ul.main-footer__list
                     li
-                        a(href="#" class="main-footer__link") 123
+                        a(href="#" class="main-footer__link") Lorem ipsum ...
                     li
-                        a(href="#" class="main-footer__link") 123
+                        a(href="#" class="main-footer__link") Lorem ipsum ...
                     li
-                        a(href="#" class="main-footer__link") 123
+                        a(href="#" class="main-footer__link") Lorem ipsum ...
                     li
-                        a(href="#" class="main-footer__link") 123
+                        a(href="#" class="main-footer__link") Lorem ipsum ...
                     li
-                        a(href="#" class="main-footer__link") 123
+                        a(href="#" class="main-footer__link") Lorem ipsum ...
             .col-4.main-footer__findme
                 h3.heading.heading-5.white.text-center= data.mainFooter.findMe.h3
                 .heading-separator
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
                 .main-footer__findme-body
-                    a.btn.btn-square.to-top.btn-codepen
-                        span.icon.icon-codepen
-                    a.btn.btn-square.to-top.btn-facebook
-                        span.icon.icon-facebook
-                    a.btn.btn-square.to-top.btn-github
-                        span.icon.icon-github
-                    a.btn.btn-square.to-top.btn-gplus
-                        span.icon.icon-gplus
-                    a.btn.btn-square.to-top.btn-linkedin
-                        span.icon.icon-linkedin
-                    a.btn.btn-square.to-top.btn-twitter
-                        span.icon.icon-twitter
+                    a(href="http://codepen.io/mateuszarchicinski" target="_blank" aria-label=data.mainFooter.findMe.body.codepenAriaLabel class="btn btn-square to-top btn-codepen")
+                        span(aria-hidden="true" class="icon icon-codepen")
+                    a(href="https://www.facebook.com/mateusz.archicinski" target="_blank" aria-label=data.mainFooter.findMe.body.facebookAriaLabel class="btn btn-square to-top btn-facebook")
+                        span(aria-hidden="true" class="icon icon-facebook")
+                    a(href="https://github.com/mateuszarchicinski" target="_blank" aria-label=data.mainFooter.findMe.body.githubAriaLabel class="btn btn-square to-top btn-github")
+                        span(aria-hidden="true" class="icon icon-github")
+                    a(href="https://plus.google.com/111077912668591105452" target="_blank" aria-label=data.mainFooter.findMe.body.gplusAriaLabel class="btn btn-square to-top btn-gplus")
+                        span(aria-hidden="true" class="icon icon-gplus")
+                    a(href="https://pl.linkedin.com/in/mateuszarchicinski" target="_blank" aria-label=data.mainFooter.findMe.body.linkedinAriaLabel class="btn btn-square to-top btn-linkedin")
+                        span(aria-hidden="true" class="icon icon-linkedin")
+                    a(href="https://twitter.com/marchicinski" target="_blank" aria-label=data.mainFooter.findMe.body.twitterAriaLabel class="btn btn-square to-top btn-twitter")
+                        span(aria-hidden="true" class="icon icon-twitter")
             .col-12
                 p.main-footer__copyright
                     small &#169; #{data.mainFooter.copyright}
