--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1592,7 +1592,7 @@ html {
   background-color: rgba(255, 255, 255, 0.1);
   position: relative;
   display: inline-block;
-  z-index: 1;
+  z-index: 0;
   overflow: hidden;
   font-size: 1em;
   font-weight: 700;
@@ -1602,6 +1602,7 @@ html {
   color: #fff;
   padding: 16.5px 20px;
   border: 1px solid #fff;
+  outline: 0;
   transition: 0.15s color ease-in-out; }
   .btn-square, .btn-round {
     width: 54px;
@@ -1622,23 +1623,23 @@ html {
     left: 100%;
     top: 0; }
   .btn:hover::after, .btn.to-left:hover::after {
-    -webkit-transform: translate3d(-100%, 0, 1px);
-            transform: translate3d(-100%, 0, 1px); }
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0); }
   .btn.to-right::after {
     left: -100%; }
   .btn.to-right:hover::after {
-    -webkit-transform: translate3d(100%, 0, 1px);
-            transform: translate3d(100%, 0, 1px); }
+    -webkit-transform: translate3d(100%, 0, 0);
+            transform: translate3d(100%, 0, 0); }
   .btn.to-top::after {
     top: 100%; }
   .btn.to-top:hover::after {
-    -webkit-transform: translate3d(0, -100%, 1px);
-            transform: translate3d(0, -100%, 1px); }
+    -webkit-transform: translate3d(0, -100%, 0);
+            transform: translate3d(0, -100%, 0); }
   .btn.to-bottom::after {
     top: -100%; }
   .btn.to-bottom:hover::after {
-    -webkit-transform: translate3d(0, 100%, 1px);
-            transform: translate3d(0, 100%, 1px); }
+    -webkit-transform: translate3d(0, 100%, 0);
+            transform: translate3d(0, 100%, 0); }
   .btn.to-top::after, .btn.to-bottom::after {
     left: 0; }
   .btn::after {
@@ -1660,16 +1661,16 @@ html {
     border-color: #f44336; }
     .btn-primary:hover::after {
       background-color: #f44336; }
-    .btn-primary-dark {
-      background-color: rgba(198, 40, 40, 0.1);
-      border-color: #c62828; }
-      .btn-primary-dark:hover::after {
-        background-color: #c62828; }
-    .btn-primary-light {
-      background-color: rgba(254, 204, 209, 0.1);
-      border-color: #feccd1; }
-      .btn-primary-light:hover::after {
-        background-color: #feccd1; }
+  .btn-primary-dark {
+    background-color: rgba(198, 40, 40, 0.1);
+    border-color: #c62828; }
+    .btn-primary-dark:hover::after {
+      background-color: #c62828; }
+  .btn-primary-light {
+    background-color: rgba(254, 204, 209, 0.1);
+    border-color: #feccd1; }
+    .btn-primary-light:hover::after {
+      background-color: #feccd1; }
   .btn-accent {
     background-color: rgba(21, 101, 192, 0.1);
     border-color: #1565c0; }
@@ -1705,8 +1706,6 @@ html {
     border-color: #00aced; }
     .btn-twitter:hover::after {
       background-color: #00aced; }
-  .btn-primary:hover, .btn-primary-dark:hover, .btn-primary-light:hover, .btn-accent:hover, .btn-codepen:hover, .btn-facebook:hover, .btn-github:hover, .btn-gplus:hover, .btn-linkedin:hover, .btn-twitter:hover {
-    color: #fff; }
 
 .icon::before {
   display: inline-block;
@@ -1799,6 +1798,9 @@ a.no-link, a.no-link:link, a.no-link:visited {
 a.link, a.no-link {
   text-decoration: none; }
 
+.site-logo__wrapper {
+  line-height: 65px; }
+
 .site-logo__img {
   max-width: 100%;
   display: inline-block;
@@ -1861,36 +1863,35 @@ a.link, a.no-link {
     .language-settings__link::after {
       display: none; }
 
-.section {
-  position: relative; }
-  .section:nth-child(odd) {
-    background-color: #fafafa; }
-  .section-decoration {
-    width: 75.5px;
-    height: 75.5px;
-    z-index: 4;
-    -webkit-transform: perspective(99px) translateZ(1px) rotate(45deg);
-            transform: perspective(99px) translateZ(1px) rotate(45deg);
-    overflow: hidden;
-    border: 10px solid #fff;
-    box-shadow: 2.5px 2.5px 10px 0 rgba(0, 0, 0, 0.1);
-    margin-top: -38px; }
-    .section-decoration-icon::before {
-      line-height: 1;
-      background-color: #f44336;
-      display: block;
-      -webkit-transform: perspective(99px) translate3d(0px, 11px, 1px) rotate(-45deg);
-              transform: perspective(99px) translate3d(0px, 11px, 1px) rotate(-45deg);
-      font-size: 32px;
-      text-align: center;
-      color: #fff;
-      box-shadow: 0 0 0 25px #f44336; }
-  .section-header {
-    padding: 115px 0 65px; }
-    .section-header-description {
-      font-size: 1.05em;
-      text-align: center;
-      margin: 0; }
+.section:nth-child(odd) {
+  background-color: #fafafa; }
+
+.section-decoration {
+  width: 75.5px;
+  height: 75.5px;
+  -webkit-transform: perspective(99px) translateZ(1px) rotate(45deg);
+          transform: perspective(99px) translateZ(1px) rotate(45deg);
+  overflow: hidden;
+  border: 10px solid #fff;
+  box-shadow: 2.5px 2.5px 10px 0 rgba(0, 0, 0, 0.1);
+  margin-top: -38px; }
+  .section-decoration-icon::before {
+    line-height: 1;
+    background-color: #f44336;
+    display: block;
+    -webkit-transform: perspective(99px) translate3d(0px, 11px, 1px) rotate(-45deg);
+            transform: perspective(99px) translate3d(0px, 11px, 1px) rotate(-45deg);
+    font-size: 32px;
+    text-align: center;
+    color: #fff;
+    box-shadow: 0 0 0 25px #f44336; }
+
+.section-header {
+  padding: 115px 0 65px; }
+  .section-header-description {
+    font-size: 1.05em;
+    text-align: center;
+    margin: 0; }
 
 .home-wrapper {
   background-image: url(https://t4.ftcdn.net/jpg/01/01/49/89/240_F_101498911_eR4DpsDTpdcwuD4UNOjdr9RDiFFAwn3Q.jpg);
@@ -1907,13 +1908,12 @@ a.link, a.no-link {
     background-image: linear-gradient(to top, #0a0a0a 0%, rgba(19, 19, 19, 0.25) 50%, rgba(19, 19, 19, 0.25) 50%, #0a0a0a 100%), url(../images/noise.png);
     position: absolute;
     display: block;
-    z-index: 1;
     left: 0;
     top: 0; }
 
 .home-row {
   position: relative;
-  z-index: 2; }
+  z-index: 1; }
 
 .home-wrapper, .home-row {
   height: calc(100vh + 64px); }
@@ -1964,7 +1964,7 @@ a.link, a.no-link {
             transform: rotate(45deg);
     border: 1px solid #fff;
     margin: 0 20px; }
-    .heading-separator__square.medium {
+    .heading-separator__square-incresed-2 {
       width: 20px;
       height: 20px; }
     .heading-separator__square.primary {
@@ -1990,16 +1990,32 @@ body {
   position: absolute;
   z-index: 10;
   left: 0;
-  top: 0;
-  transition: 0.2s background-color ease, 0.2s box-shadow ease; }
+  top: 0; }
   .main-header__fixed {
-    position: fixed;
     background-color: #212121;
+    position: fixed;
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8); }
+    .main-header__fixed, .main-header__fixed.hide {
+      -webkit-transform: translate3d(0, -100%, 0);
+              transform: translate3d(0, -100%, 0);
+      will-change: transform;
+      opacity: 0;
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+      filter: alpha(opacity=0); }
+    .main-header__fixed.hide, .main-header__fixed.show {
+      transition: 0.3s opacity ease-in-out, 0.3s -webkit-transform ease-in-out;
+      transition: 0.3s transform ease-in-out, 0.3s opacity ease-in-out;
+      transition: 0.3s transform ease-in-out, 0.3s opacity ease-in-out, 0.3s -webkit-transform ease-in-out; }
+    .main-header__fixed.show {
+      -webkit-transform: translate3d(0, 0, 0);
+              transform: translate3d(0, 0, 0);
+      will-change: transform;
+      opacity: 1;
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+      filter: alpha(opacity=100); }
 
 .main-footer {
   background-color: #212121;
-  position: relative;
   padding: 35px 0 30px;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8); }
   .main-footer__list {
@@ -2071,5 +2087,8 @@ body {
 .site-nav__list, .language-settings {
   padding: 0;
   margin: 0; }
+
+.btn-primary:hover, .btn-primary-dark:hover, .btn-primary-light:hover, .btn-accent:hover, .btn-codepen:hover, .btn-facebook:hover, .btn-github:hover, .btn-gplus:hover, .btn-linkedin:hover, .btn-twitter:hover {
+  color: #fff; }
 
 /*# sourceMappingURL=maps/main.css.map */
