--- a/src/sass/components/_section.scss
+++ b/src/sass/components/_section.scss
@@ -8,23 +8,22 @@ $section__odd__background-color: $color__snow !default;
 // .section-decoration
 $section-decoration__border: 10px solid $color__white !default;
 $section-decoration__box-shadow: 2.5px 2.5px 10px 0 rgba($color__black-1, 0.1) !default;
-// .section-decoration-icon
-$section-decoration-icon__background-color: $primary-color !default;
-$section-decoration-icon__color: $color__white !default;
-$section-decoration-icon__box-shadow: 0 0 0 25px $primary-color !default;
+// .section-decoration-icon::before
+$section-decoration-icon__before__background-color: $primary-color !default;
+$section-decoration-icon__before__font-size: 32px !default;
+$section-decoration-icon__before__color: $color__white !default;
+$section-decoration-icon__before__box-shadow: 0 0 0 25px $primary-color !default;
 // .section-header-description
 $section-header-description__font-size: 1.05em !default;
 
 
 .section {
-    position: relative;
     &:nth-child(odd) {
         background-color: $section__odd__background-color;
     }
     &-decoration {
         width: 75.5px;
         height: 75.5px;
-        z-index: 4;
         transform: perspective(99px) translateZ(1px) rotate(45deg);
         overflow: hidden;
         border: $section-decoration__border;
@@ -33,13 +32,13 @@ $section-header-description__font-size: 1.05em !default;
         &-icon {
             &::before {
                 line-height: 1;
-                background-color: $section-decoration-icon__background-color;
+                background-color: $section-decoration-icon__before__background-color;
                 display: block;
                 transform: perspective(99px) translate3d(0px, 11px, 1px) rotate(-45deg);
-                font-size: 32px;
+                font-size: $section-decoration-icon__before__font-size;
                 text-align: center;
-                color: $section-decoration-icon__color;
-                box-shadow: $section-decoration-icon__box-shadow;
+                color: $section-decoration-icon__before__color;
+                box-shadow: $section-decoration-icon__before__box-shadow;
             }
         }
     }
