--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -10,8 +10,8 @@
 
 // *--------- VARIABLES ---------*
 // Lines Heights
-$line-height__1-2:     1.2;
-$line-height__1-3:     1.3;
+$line-height__1-2:      1.2;
+$line-height__1-3:      1.3;
 
 // Fonts
 $font__raleway:         "Raleway";
@@ -19,40 +19,40 @@ $font__source-sans-pro: "Source Sans Pro";
 $font__sans-serif:      sans-serif;
 
 // Fonts Sizes
-$font-size__1:         1em;
+$font-size__1:          1em;
 
 // Fonts Weights
-$font-weight__bolder-9:  900;
-$font-weight__bolder-8:  800;
-$font-weight__bolder-7:  700;
-$font-weight__bolder:  600;
-$font-weight__bold:    500;
-$font-weight__normal:  400;
-$font-weight__lighter: 300;
-$font-weight__lighter-2: 200;
-$font-weight__lighter-1: 100;
+$font-weight__bolder-9: 900;
+$font-weight__bolder-8: 800;
+$font-weight__bolder-7: 700;
+$font-weight__bolder:   600;
+$font-weight__bold:     500;
+$font-weight__normal:   400;
+$font-weight__lighter:  300;
+$font-weight__lighter-2:200;
+$font-weight__lighter-1:100;
 
 // Colors
-$primary-color-dark:   $color__persian-red;
-$primary-color:        $color__red-orange;
-$primary-color-light:  $color__we-peep;
-$accent-color:         $color__denim;
-$primary-text-color:   $color__nero;
-$secondary-text-color: $color__grey;
-$tertiary-text-color:  $color__silver;
-$divider-color:        $color__silver;
+$primary-color-dark:    $color__persian-red;
+$primary-color:         $color__red-orange;
+$primary-color-light:   $color__we-peep;
+$accent-color:          $color__denim;
+$primary-text-color:    $color__nero;
+$secondary-text-color:  $color__grey;
+$tertiary-text-color:   $color__silver;
+$divider-color:         $color__silver;
 
 // Breaks Points
-$break-point__1:       959px;
-$break-point__2:       645px;
+$break-point__1:        959px;
+$break-point__2:        645px;
 
 // Components & Layout
 $site-nav__main-header__height: 65px;
 
 
 // *--------- TYPOGRAPHY ---------*
-$base__line-height: $line-height__1-2;
-$base__font-family: $font__source-sans-pro, $font__sans-serif;
-$base__font-size: $font-size__1;
-$base__font-weight: $font-weight__normal;
+$base__line-height:     $line-height__1-2;
+$base__font-family:     $font__source-sans-pro, $font__sans-serif;
+$base__font-size:       $font-size__1;
+$base__font-weight:     $font-weight__normal;
 
