--- a/src/templates/components/sections/_home.pug
+++ b/src/templates/components/sections/_home.pug
@@ -8,7 +8,7 @@ section(id="home" class="section home-wrapper")
                 h2.heading.heading-1.white.text-center= data.mainWrapper.homeWrapper.h2
                 .heading-separator
                     .heading-separator__line.primary
-                    .heading-separator__square.medium
+                    .heading-separator__square.heading-separator__square-incresed-2
                     .heading-separator__line.accent
                 h3.heading.heading-3.white.text-center= data.mainWrapper.homeWrapper.h3
                 .home-header-buttons
