--- a/src/templates/components/sections/_about-me.pug
+++ b/src/templates/components/sections/_about-me.pug
@@ -13,3 +13,26 @@ section(id="about-me" class="section about-me-wrapper")
                     .heading-separator__square.primary
                     .heading-separator__line
                 p.section-header-description= data.mainWrapper.aboutMeWrapper.header.p
+        .row
+            .col-6
+                .about-me-section
+                    header.about-me-section-header
+                        h3 Profil
+                .about-me-section
+                    header.about-me-section-header
+                        h3 Informacje i kontakt
+                .about-me-section
+                    header.about-me-section-header
+                        h3 Atrybuty i cechy
+            .col-6
+                .about-me-section
+                    header.about-me-section-header
+                        h3 Edukacja
+                .about-me-section
+                    header.about-me-section-header
+                        h3 Doświadczenie i kursy
+            .col-12
+                .about-me-section
+                    header.about-me-section-header
+                        h3 Umiejętności i technologie
+                        
