--- a/src/templates/layout/_footer.pug
+++ b/src/templates/layout/_footer.pug
@@ -34,11 +34,11 @@ footer.main-footer
                         a(href="#" class="main-footer__link") Lorem ipsum ...
                     li
                         a(href="#" class="main-footer__link") Lorem ipsum ...
-            .col-4.main-footer__findme
+            .col-4.row.flex-column
                 h3.heading.heading-5.white.text-center= data.mainFooter.findMe.h3
                 .heading-separator
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
-                .main-footer__findme-body
+                .row.align-content-center.align-items-center.justify-content-center.main-footer__findme-body
                     a(href="http://codepen.io/mateuszarchicinski" target="_blank" aria-label=data.mainFooter.findMe.body.codepenAriaLabel class="btn btn-square to-top btn-codepen")
                         span(aria-hidden="true" class="icon icon-codepen")
                     a(href="https://www.facebook.com/mateusz.archicinski" target="_blank" aria-label=data.mainFooter.findMe.body.facebookAriaLabel class="btn btn-square to-top btn-facebook")
