--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2029,37 +2029,16 @@ body {
     transition: 0.3s color ease-in-out; }
     .main-footer__link:hover {
       color: #bdbdbd; }
-  .main-footer__findme {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column; }
-    .main-footer__findme-body {
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-flex: 1;
-          -ms-flex: 1;
-              flex: 1;
-      -webkit-flex-wrap: wrap;
-          -ms-flex-wrap: wrap;
-              flex-wrap: wrap;
-      -webkit-align-content: center;
-          -ms-flex-line-pack: center;
-              align-content: center;
-      -webkit-align-items: center;
-          -ms-flex-align: center;
-              align-items: center;
-      -webkit-justify-content: center;
-          -ms-flex-pack: center;
-              justify-content: center;
-      padding-bottom: 25px; }
-      .main-footer__findme-body > .btn {
-        width: 48px;
-        height: 48px;
-        margin: 5px; }
+  .main-footer__findme-body {
+    min-height: 120px;
+    -webkit-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    padding-bottom: 25px; }
+    .main-footer__findme-body > .btn {
+      width: 48px;
+      height: 48px;
+      margin: 5px; }
   .main-footer__copyright {
     position: relative;
     text-align: center;
