--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -106,6 +106,10 @@
     @import 'components/heading-separator';
 
 
+    // *--------- DEV FACE ---------*
+    @import 'components/dev-face';
+
+
 // ---------------------
 //     MODULES
 // ---------------------
