--- a/src/templates/components/sections/_about-me.pug
+++ b/src/templates/components/sections/_about-me.pug
@@ -15,6 +15,11 @@ section(id="about-me" class="section about-me-wrapper")
                 p.section-header-description= data.mainWrapper.aboutMeWrapper.header.p
         .row
             .col-6
+                figure.dev-face__wrapper
+                    img(src="../images/Mateusz-Archiciński_Front-End-Developer.jpg" alt="Mateusz Archiciński Avatar" width="190" height="190" class="dev-face__img dev-face__img-rotate-28")
+                    figcaption.dev-face__img-caption
+                        span.dev-face__name Mateusz Archiciński
+                        span.dev-face__profession Front-End Developer
                 .about-me-section
                     header.about-me-section-header
                         h3 Profil
