--- a/src/templates/components/sections/_home.pug
+++ b/src/templates/components/sections/_home.pug
@@ -4,7 +4,7 @@
 section(id="home" class="section home-wrapper")
     .container
         .row.no-gutters.flex-column.align-items-center.justify-content-center.home-row
-            header.home-header
+            hgroup.home-header
                 h2.heading.heading-1.white.text-center= data.mainWrapper.homeWrapper.h2
                 .heading-separator
                     .heading-separator__line.primary
